# sims3-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  USAGE.txt  find_merged_cc.bat
src/: dbpf.rs  lib.rs  refpack.rs  util.rs
src/dbpf/: filetypes.rs
src/dbpf/filetypes/: nmap.rs
src/refpack/: decompress.rs
