[package]
name = "sims3_rs"
version = "0.2.0"
authors = ["Kitlith <kitlith@kitl.pw>"]
edition = '2021'

# some of these are only for the binaries...
[dependencies]
scroll = {version = "0.11", features = ["derive"] }
memmap = "0.7"
num-traits = "0.2"
num-derive = "0.4"
walkdir = "2"
byteorder = "1"
lazy-init = "0.5.0"
rayon = "1.0.2"
lazy_static = "1.1.0"
clap = { version = "4.4", features = ["derive"] }
binrw = "0.13"
memchr = "2.5"
dont_disappear = "3.0.1"
dirs = "5.0.0"
refpack = "4"
bilge = { git = "https://github.com/hecatia-elegua/bilge" }
paste = "1.0"
generativity = "1.0"

[dev-dependencies]
